# ME7785_RoboticsResearch

./: .gitignore  Lab2.drawio  README.md  Untitled Diagram.drawio
Final/: grid.py
Lab1/: ME7785_Lab1b.html  ME7785_Lab1b.ipynb  find_object.py
Lab2/: Lab2.drawio
Lab2/masteroogway_object_follower/: setup.cfg  setup.py
Lab2/masteroogway_object_follower/launch/: object_follower.launch.py
Lab2/masteroogway_object_follower/masteroogway_object_follower/: find_object.py  rotate_robot.py
Lab3/: Lab3_diagram.drawio
Lab4/: Lab4_diagram.drawio
Lab5/: burger.yaml  burger_gazebo.yaml  burger_lab.yaml
Lab6/: example_knn.py
Lab6/model_knn/: model_grader.py  test_model.pkl
Lab6/model_knn/submission_test/: requirements.txt
Lab6/model_resnet/: model_basic_inference.py  model_grader.py  model_trainer.py  readme.txt
Lab6/submission_test/: model_grader.py  submission.py
turtlebot3_ws/help/: COPY.bash_aliases  Lab2.txt  Lab3.txt
turtlebot3_ws/src/camera_viewer-master/: setup.py
turtlebot3_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
turtlebot3_ws/src/masteroogway_chase_object/: package.xml  setup.cfg  setup.py
turtlebot3_ws/src/masteroogway_detect_object/: package.xml  setup.cfg  setup.py
turtlebot3_ws/src/masteroogway_detect_object/launch/: detect_object.launch.py
turtlebot3_ws/src/masteroogway_detect_object/masteroogway_detect_object/: detect_object.py  rotate_robot.py
turtlebot3_ws/src/masteroogway_final/: package.xml  setup.cfg  setup.py
turtlebot3_ws/src/masteroogway_go_to_goal/: package.xml  setup.cfg  setup.py
(+41 files in other folders)
